--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "rxjs": "~7.5.0",
